--- a/pages/elektro-pantograf.html
+++ b/pages/elektro-pantograf.html
@@ -20,6 +20,8 @@
 	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 	
 	<link rel="stylesheet" href="style.css">
+	
+	<title>Pantograf</title>
 </head>
 <body>
 	<model-viewer src="../models-android/Elektro_Pantograf.glb"
