--- a/pages/emotor-inside.html
+++ b/pages/emotor-inside.html
@@ -20,6 +20,8 @@
 	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 	
 	<link rel="stylesheet" href="style.css">
+	
+	<title>Motor Inside</title>
 </head>
 <body>
 	<model-viewer src="../models-android/eMotor_Inside.glb"
