--- a/pages/industrial-lift.html
+++ b/pages/industrial-lift.html
@@ -20,6 +20,8 @@
 	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 	
 	<link rel="stylesheet" href="style.css">
+	
+	<title>Industrial Lift</title>
 </head>
 <body>
 	<model-viewer src="../models-android/Industrial_Lift.glb"
