--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<link rel="stylesheet" href="style.css">
+	
+	<title>Models</title>
 </head>
 <body>
-	<title>Models</title>
-
+	<h1>Models</h1>
+	
 	<div class="row">
 		<a href="/pages/elektro-pantograf">
 			<img src="thumbnails/Elektro_Pantograf.jpg" alt="Pantograf">
