--- a/model.html
+++ b/model.html
@@ -19,9 +19,10 @@
 	<!-- 🚨 REQUIRED: The model-viewer component -->
 	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 	
-	<link rel="stylesheet" href="style.css">
+	<!-- Assigns Model and Friendly Name based on URL parameters -->
+	<script src="assign-model.js"></script>
 	
-	<title>Bizzcom Palette</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<model-viewer loading="eager"
