--- a/model.html
+++ b/model.html
@@ -25,8 +25,8 @@
 	<link rel="stylesheet" href="model.css">
 </head>
 <body>
-	<model-viewer src="../models-android/Elektro_Pantograf.glb"
-		      ios-src="../models-ios/Elektro_Pantograf.usdz"
+	<model-viewer src="models-android/Elektro_Pantograf.glb"
+		      ios-src="models-ios/Elektro_Pantograf.usdz"
 		      loading="eager"
 		      ar
 		      autoplay
