--- a/index.html
+++ b/index.html
@@ -12,49 +12,49 @@
 		<a href="model?filename=Elektro_Pantograf&friendly-name=Pantograf">
 			<img src="thumbnails/Elektro_Pantograf.jpg" alt="Pantograf">
 		</a>
-		<a href="/pages/elektro-pantograf">
+		<a href="model?filename=Elektro_Pantograf&friendly-name=Pantograf">
 			<img src="qrcodes/Elektro_Pantograf.png" alt="Pantograf">
 		</a>
 	</div>
 
 	<div class="row">
-		<a href="/pages/emotor-explode">
+		<a href="model?filename=eMotor_Explode&friendly-name=Motor Explode">
 			<img src="thumbnails/eMotor_Explode.jpg" alt="Motor Explode">
 		</a>
-		<a href="/pages/emotor-explode">
+		<a href="model?filename=eMotor_Explode&friendly-name=Motor Explode">
 			<img src="qrcodes/eMotor_Explode.png" alt="Motor Explode">
 		</a>
 	</div>
 
 	<div class="row">
-		<a href="/pages/emotor-inside">
+		<a href="model?filename=eMotor_Inside&friendly-name=Motor Inside">
 			<img src="thumbnails/eMotor_Inside.jpg" alt="Motor Inside">
 		</a>
-		<a href="/pages/emotor-inside">
+		<a href="model?filename=eMotor_Inside&friendly-name=Motor Inside">
 			<img src="qrcodes/eMotor_Inside.png" alt="Motor Inside">
 		</a>
 	</div>
 
 	<div class="row">
-		<a href="/pages/forklift">
+		<a href="model?filename=Forklift&friendly-name=Forklift">
 			<img src="thumbnails/Forklift.jpg" alt="Forklift">
 		</a>
-		<a href="/pages/forklift">
+		<a href="model?filename=Forklift&friendly-name=Forklift">
 			<img src="qrcodes/Forklift.png" alt="Forklift">
 		</a>
 	</div>
 
 	<div class="row">
-		<a href="/pages/industrial-lift">
+		<a href="model?filename=Industrial_Lift&friendly-name=Industrial Lift">
 			<img src="thumbnails/Industrial_Lift.jpg" alt="Industrial Lift">
 		</a>
-		<a href="/pages/industrial-lift">
+		<a href="model?filename=Industrial_Lift&friendly-name=Industrial Lift">
 			<img src="qrcodes/Industrial_Lift.png" alt="Industrial Lift">
 		</a>
 	</div>
 
 	<div class="row">
-		<a href="/pages/bizzcom-palette">
+		<a href="model?filename=Bizzcom_Palette&friendly-name=Bizzcom Palette">
 			<img src="qrcodes/Bizzcom_Palette.png" alt="Bizzcom Palette">
 		</a>
 	</div>
