--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<h1>Models</h1>
 	
-	<div class="row">
+	<div>
 		<a href="model?filename=Elektro_Pantograf&friendly-name=Pantograf">
 			<img src="thumbnails/Elektro_Pantograf.jpg" alt="Pantograf">
 		</a>
