--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			 src=../models-android/Elektro_Pantograf.glb&
 			 ios-src=../models-ios/Elektro_Pantograf.usdz&
 			 poster=../thumbnails/Elektro_Pantograf.jpg&
-			 alt=Pantograf>
+			 alt=Pantograf">
 			<img src="thumbnails/Elektro_Pantograf.jpg" alt="Pantograf">
 		</a>
 		<a href="model?filename=Elektro_Pantograf&friendly-name=Pantograf">
