--- a/model.html
+++ b/model.html
@@ -19,7 +19,7 @@
 	<!-- 🚨 REQUIRED: The model-viewer component -->
 	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 	
-	<!-- Assigns Model and Friendly Name based on URL parameters -->
+	<!-- Assigns model based on URL parameters -->
 	<script src="assign-model.js"></script>
 	
 	<link rel="stylesheet" href="model.css">
