--- a/index.html
+++ b/index.html
@@ -9,18 +9,10 @@
 	<h1>Models</h1>
 	
 	<div>
-		<!--a href="model?
-			 title=Pantograf&
-			 src=../models-android/Elektro_Pantograf.glb&
-			 ios-src=../models-ios/Elektro_Pantograf.usdz&
-			 poster=../thumbnails/Elektro_Pantograf.jpg&
-			 alt=Pantograf">
-			<img src="thumbnails/Elektro_Pantograf.jpg" alt="Pantograf">
-		</a-->
-		<a href="model?title=Pantograf&src=../models-android/Elektro_Pantograf.glb">
+		<a href="model?title=Pantograf&src=../models-android/Elektro_Pantograf.glb&ios-src=../models-ios/Elektro_Pantograf.usdz&poster=../thumbnails/Elektro_Pantograf.jpg&alt=Pantograf">
 			<img src="thumbnails/Elektro_Pantograf.jpg" alt="Pantograf">
 		</a>
-		<a href="model?filename=Elektro_Pantograf&friendly-name=Pantograf">
+		<a href="model?title=Pantograf&src=../models-android/Elektro_Pantograf.glb&ios-src=../models-ios/Elektro_Pantograf.usdz&poster=../thumbnails/Elektro_Pantograf.jpg&alt=Pantograf">
 			<img src="qrcodes/Elektro_Pantograf.png" alt="Pantograf">
 		</a>
 	</div>
